--- a/src/sass/fonts/_fonts.sass
+++ b/src/sass/fonts/_fonts.sass
@@ -8,6 +8,12 @@
 // =============================================================================
 // Font-Face Fonts
 // =============================================================================
-+font-face("magistralc-regular", "../fonts/magistralc/regular/magistralc", normal, normal, eot woff ttf svg)
-+font-face("magistralc-bold", "../fonts/magistralc/bold/magistralc-bold", normal, normal, eot woff ttf svg)
-+font-face("magistralc-black", "../fonts/magistralc/black/magistralc-black", normal, normal, eot woff ttf svg)
+//+font-face("magistralc-regular", "../fonts/magistralc/regular/magistralc", normal, normal, eot woff ttf svg)
+//+font-face("magistralc-bold", "../fonts/magistralc/bold/magistralc-bold", normal, normal, eot woff ttf svg)
+//+font-face("magistralc-black", "../fonts/magistralc/black/magistralc-black", normal, normal, eot woff ttf svg)
+
++font-face("proximanova-regular", "../fonts/proximanova/regular/proximanova-regular", normal, normal, eot woff ttf svg)
++font-face("proximanova-bold", "../fonts/proximanova/bold/proximanova-bold", normal, normal, eot woff ttf svg)
++font-face("proximanova-bold-italic", "../fonts/proximanova/bold-italic/proximanova-bold-italic", normal, normal, eot woff ttf svg)
++font-face("proximanova-italic", "../fonts/proximanova/italic/proximanova-italic", normal, normal, eot woff ttf svg)
++font-face("proximanova-light", "../fonts/proximanova/light/proximanova-light", normal, normal, eot woff ttf svg)
