--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -448,6 +448,21 @@
 	top: 0
 	+size(100%)
 
+// =============================================================================
+// position
+// =============================================================================
+/// Примесь создает гурппу свойств для позиционирования
+=position($pos: absolute, $t: 0, $r: null, $b:null, $l: 0)
+	position: $pos
+	@if $t
+		top: $t
+	@if $r
+		right: $r
+	@if $b
+		bottom: $b
+	@if $l
+		left: $l
+
 /// Примесь позволяет указывает изображению способ заполнения блока,
 /// в котором находится
 /// Для ie9 необходимо подключить скрипт и прописать дополнительные свойства
