--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -52,21 +52,21 @@
 		color: $btn-text-color
 
 // btn-more
-.btn-main, .btn-main--more
+.btn-main
 	position: relative
 	min-width: 240px
 	padding: 13px 30px
-	+font(1.8rem, 1.333)
-	color: white
-	background-color: black
-	transition-property: background-color, color
-	transition-duration: $animation-speed
+	+font(1.6rem, 1.3)
+	color: $text-color
+	background-color: transparent
+	border: 1px solid $text-color
 	+antialiased
 
 	.no-touchevents &:hover
 		background-color: $base-color
+		border-color: $base-color
 
-	&:active
+	//&:active
 		transform: translate(0, 2px) scale(0.95)
 
 	& + span
@@ -80,26 +80,66 @@
 		margin-right: 20px
 
 	path
-		fill: white
+		fill: $text-color
 
 .btn-main--more
-	padding: 13px 65px 13px 30px
+	display: block
+	position: relative
+	min-width: 240px
+	padding: 13px 30px 14px
+	+font(1.4rem, 1.5)
+	color: white
+	background-color: transparent
+	+antialiased
+	opacity: 0
+	visibility: hidden
+	transition-property: background-color, transform, opacity, visibility
+	transition-duration: $animation-speed-element
+
+	.no-touchevents &:hover
+		background-color: $base-color
+
+	.main-section.active &
+		opacity: 1
+		visibility: visible
+		transition-delay: 0s, $animation-speed-element-delay*3, $animation-speed-element-delay*3, $animation-speed-element-delay*3
 
 	&::before, &::after
 		+pseudo()
-		top: 50%
-		right: 40px
-		width: 14px
-		height: 2px
-		background-color: $base-color
-		transition-property: background-color
-		transition-duration: $animation-speed
+		+cover($position: null)
+		z-index: -1
+		border: solid $base-color
+		transition-property: transform
+		transition-duration: $animation-speed-element
+
+		.main-section.active &
+			transform: translate(0, 0)
+			transition-delay: $animation-speed-element-delay*3
 
 	&::before
-		transform: rotate(0.25turn)
+		border-width: 0 0 1px 1px
+		transform: translate(-10px, 10px)
 
-	.no-touchevents &:hover
+	&::after
+		border-width: 1px 1px 0 0
+		transform: translate(10px, -10px)
+
+	& > span
+		position: relative
+		padding-right: 35px
+		filter: drop-shadow(1px 1px 0 rgba(0, 0, 0, 0.35))
+
 		&::before, &::after
+			+pseudo()
+			top: 50%
+			right: 0
+			width: 10px
+			height: 2px
 			background-color: white
+			transition-property: background-color
+			transition-duration: $animation-speed
+
+		&::before
+			transform: rotate(0.25turn)
 
 /*buttons end
