--- a/src/sass/components/_top-panel.sass
+++ b/src/sass/components/_top-panel.sass
@@ -11,12 +11,13 @@
 	padding: 0 $page-layout-space-horizontal
 	height: $top-panel-height
 	+linear-gradient(to bottom, rgba(0, 0, 0, 0.31) 0, rgba(0, 0, 0, 0) 100%)
+	+font(24px, 1.3)
 	z-index: 40
 
 .top-panel__widget
 	float: left
 	color: white
-	padding: 20px 60px 20px 0
+	padding: $top-panel-space 60px $top-panel-space 0
 
 	a
 		text-decoration: none
@@ -24,5 +25,75 @@
 
 		.no-touchevents &:hover
 			text-decoration: underline
+
+/*contact phones
+.contact-phones
+	position: relative
+
+.contact-phones__handler
+	position: relative
+	display: block
+	padding-right: 20px
+	z-index: 100
+	cursor: pointer
+
+	.no-touchevents &:hover
+		text-decoration: none !important
+
+	&::before
+		+pseudo()
+		left: -#{$top-panel-space}
+		right: -#{$top-panel-space}
+		bottom: 0
+		height: calc(100% + #{$top-panel-space})
+		background-color: $logo-bg-color
+		opacity: 0
+		visibility: hidden
+		transition-property: opacity, visibility
+		transition-duration: $animation-speed
+		z-index: -1
+
+		.choice-opened &
+			opacity: 1
+			visibility: visible
+
+	&::after
+		+pseudo()
+		right: 0
+		top: 50%
+		+size(7px)
+		margin-top: -3px
+		border: solid white
+		border-width: 0 1px 1px 0
+		transform: rotate(45deg)
+		transform-origin: right top
+
+		.choice-opened &
+			border-width: 1px 0 0 1px
+			margin-top: 0
+
+.contact-phones__drop
+	position: absolute
+	left: -#{$top-panel-space}
+	top: 100%
+	width: calc(100% + #{$top-panel-space*2})
+	padding: 5px $top-panel-space $top-panel-space
+	overflow-x: hidden
+	overflow-y: auto
+	background-color: $logo-bg-color
+	opacity: 0
+	visibility: hidden
+	transition-property: opacity, visibility
+	transition-duration: $animation-speed
+	z-index: 50
+
+	.choice-opened &
+		opacity: 1
+		visibility: visible
+
+	li
+		padding: 5px 0
+
+/*contact phones end
 
 /*top panel end
