--- a/src/sass/partials/_sidebar.sass
+++ b/src/sass/partials/_sidebar.sass
@@ -29,6 +29,8 @@ $sidemenu-bg-color-hover: #999
 	text-decoration: none
 	border-top: 1px solid $sidemenu-bg-color-hover
 	background-color: $base-color
+
+.side-menu__hover
 	transition-property: background-color
 	transition-duration: $animation-speed
 
@@ -65,7 +67,21 @@ $sidemenu-bg-color-hover: #999
 		+pseudo($pos: relative)
 		+ratio(1, 1)
 
-	img
+	svg
+		+position(absolute, 50%, null, null, 50%)
+		+size(100px)
+		transform: translate(-50%, -50%)
+		transition-property: opacity, transform
+		transition-duration: $animation-speed
+
+		.no-touchevents .side-menu__cell:hover &
+			//transform: translate(-50%, -70%) scale(0.95)
+			opacity: 0.3
+
+	path
+		fill: white
+
+	//img
 		position: absolute
 		left: 50%
 		top: 50%
@@ -81,8 +97,9 @@ $sidemenu-bg-color-hover: #999
 .side-menu__title
 	display: block
 	position: relative
-	+font(1.8rem, 1.167)
 	+font-normal
+	+font(1.8rem, 1.167)
+	text-transform: uppercase
 	transition-property: color, transform
 	transition-duration: $animation-speed
 	z-index: 5
@@ -93,27 +110,56 @@ $sidemenu-bg-color-hover: #999
 .download
 	text-align: left
 
-	.download__icon
-		float: left
-		+size(60px)
-		border: 1px solid $text-color
-		margin-right: 20px
-		margin-top: 0.3em
-		+font-bold
-		+font(16px, 58px)
-		text-align: center
+.download__icon
+	position: relative
+	overflow: hidden
+	float: left
+	+size(60px)
+	border: 1px solid $text-color
+	margin-right: 20px
+	margin-top: 0.3em
+	+font-bold
+	+font(16px, 58px)
+	text-align: center
+	transition-property: border-color
+	transition-duration: $animation-speed
 
-	.download__title
+	.no-touchevents .download:hover &
+		border-color: $sidemenu-bg-color-hover
+
+	&::before
+		+pseudo(attr(data-label))
+		+position($pos: null, $t: 0, $l: 0)
+		+size(100%)
+		color: white
+		background-color: $sidemenu-bg-color-hover
+		transition-property: transform
+		transition-duration: $animation-speed
+		transform: translate(-100%, 0)
+
+		.no-touchevents .download:hover &
+			transform: translate(0, 0)
+
+	span
 		display: block
-		overflow: hidden
-		+font-bold
-		+font(1.6rem, 1.3)
+		height: 100%
+		transition-property: transform
+		transition-duration: $animation-speed
 
-		span
-			display: block
-			+font-normal
-			+font(1.4rem, 1.5)
-			color: $text-color-light
-			margin-top: 0.5em
+		.no-touchevents .download:hover &
+			transform: translate(100%, 0)
+
+.download__title
+	display: block
+	overflow: hidden
+	+font-bold
+	+font(1.8rem, 1.167)
+
+	span
+		display: block
+		+font-normal
+		+font(1.4rem, 1.5)
+		color: $text-color-light
+		margin-top: 0.5em
 
 /*SIDE MENU end*/
