--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -51,6 +51,7 @@
 @import components/scroll-nav
 @import components/top-panel
 @import components/news-grid
+@import components/providers
 
 /*======================================================*/
 /*PAGES*/
