--- a/src/sass/components/_top-panel.sass
+++ b/src/sass/components/_top-panel.sass
@@ -10,12 +10,26 @@
 	max-width: calc(#{$page-layout-width - $sidebar-width - $header-width})
 	padding: 0 $page-layout-space-horizontal
 	height: $top-panel-height
-	+linear-gradient(to bottom, rgba(0, 0, 0, 0.31) 0, rgba(0, 0, 0, 0) 100%)
-	+font(24px, 1.3)
 	z-index: 40
 
-.top-panel__widget
-	float: left
+	&::before
+		+pseudo()
+		left: 0
+		top: 0
+		width: 100%
+		height: 165px
+		z-index: -1
+		pointer-events: none
+		+linear-gradient(to bottom, rgba(0,0,0,0.94) 0%,rgba(0,0,0,0.84) 14%,rgba(0,0,0,0.7) 28%,rgba(0,0,0,0.35) 59%,rgba(0,0,0,0.18) 75%,rgba(0,0,0,0.06) 89%,rgba(0,0,0,0) 100%)
+
+.top-panel-contacts
+	float: right
+	+clear-spacing
+
+.top-panel-contacts__item
+	+display-inline-block-top
+	+font(24px, 1.3)
+	letter-spacing: normal
 	color: white
 	padding: $top-panel-space 60px $top-panel-space 0
 
@@ -23,8 +37,20 @@
 		text-decoration: none
 		color: white
 
+		span
+			border-bottom: 1px solid transparent
+			transition: border-color $animation-speed
+
 		.no-touchevents &:hover
-			text-decoration: underline
+			text-decoration: none
+
+			span
+				border-color: white
+
+			&[href^="tel"]
+				span
+					border-color: transparent
+
 
 /*contact phones
 .contact-phones
@@ -36,6 +62,9 @@
 	padding-right: 20px
 	z-index: 100
 	cursor: pointer
+
+	span, .top-panel-contacts__item & span
+		border-bottom-style: dashed
 
 	.no-touchevents &:hover
 		text-decoration: none !important
@@ -95,5 +124,77 @@
 		padding: 5px 0
 
 /*contact phones end
+
+/*logo alt
+.logo-alt
+	display: inline-block
+	z-index: 50
+
+	.top-panel &
+		float: left
+		height: 100%
+
+	a
+		display: block
+		position: relative
+		height: 100%
+		text-decoration: none
+		white-space: nowrap
+		+clear-spacing
+
+		&::after
+			+vertical-align()
+
+	.logo-title, .logo-map
+		position: relative
+		+display-inline-block-middle
+		+font($font-size, $line-height)
+		letter-spacing: normal
+		white-space: normal
+
+		.fig
+			text-indent: -9999px
+			overflow: hidden
+			position: relative
+			background-size: contain
+			background-position: center
+			background-repeat: no-repeat
+
+			&::before
+				+pseudo($pos: relative)
+
+			span
+				+hide-text
+
+	.logo-title
+		.fig
+			+size(89px, auto)
+			background-image: url(../../img/logo-title.png)
+
+			&::before
+				+ratio(89, 45)
+
+	.logo-map
+		.fig
+			background-image: url(../../img/logo-map.png)
+			+size(192px, auto)
+
+			&::before
+				+ratio(192, 50)
+
+	.logo-title + .logo-map
+		padding-left: 20px
+		margin-left: 20px
+
+		&::before
+			+pseudo()
+			top: 50%
+			left: 0
+			height: 44px
+			border: dotted $border-color
+			border-width: 0 0 0 1px
+			transform: translate(0, -50%)
+
+/*logo alt end
 
 /*top panel end
