--- a/src/sass/fonts/_fonts.sass
+++ b/src/sass/fonts/_fonts.sass
@@ -13,6 +13,7 @@
 //+font-face("magistralc-black", "../fonts/magistralc/black/magistralc-black", normal, normal, eot woff ttf svg)
 
 +font-face("proximanova-regular", "../fonts/proximanova/regular/proximanova-regular", normal, normal, eot woff ttf svg)
++font-face("proximanova-black", "../fonts/proximanova/black/proximanova-black", normal, normal, eot woff ttf svg)
 +font-face("proximanova-bold", "../fonts/proximanova/bold/proximanova-bold", normal, normal, eot woff ttf svg)
 +font-face("proximanova-bold-italic", "../fonts/proximanova/bold-italic/proximanova-bold-italic", normal, normal, eot woff ttf svg)
 +font-face("proximanova-italic", "../fonts/proximanova/italic/proximanova-italic", normal, normal, eot woff ttf svg)
