--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -63,6 +63,19 @@
 	line-height: $line-height
 
 // =============================================================================
+// display inline block + vertical align
+// =============================================================================
+/// Примесь задает пару свойст display: inline-block и vertical-align для
+/// выравнивания инлайн-блок элементов по вертикали
+=display-inline-block-top()
+	display: inline-block
+	vertical-align: top
+
+=display-inline-block-middle()
+	display: inline-block
+	vertical-align: middle
+
+// =============================================================================
 // pseudo
 // =============================================================================
 /// Примесь добавляет к псевдоэлементу базовые свойства.
@@ -878,8 +891,8 @@
 =animation-on-scroll($list)
 	@for $i from 1 through length($list)
 		$item: nth($list, $i)
-		@debug $i
-		@debug $item
+		//@debug $i
+		//@debug $item
 
 		.#{$item}
 			opacity: 0
