--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -27,23 +27,29 @@
 /*======================================================*/
 @import base/typography
 @import components/buttons
-
-/*======================================================*/
-/*PARTIALS*/
-/*======================================================*/
-@import partials/layout
-@import partials/header
-@import partials/sidebar
-@import partials/aside
-@import partials/navigation
-@import partials/footer
 @import partials/forms-default
 
 /*======================================================*/
-/*COMPONENTS*/
+/*LAYOUT*/
 /*======================================================*/
-@import components/files
+@import partials/layout
+
+/*======================================================*/
+/*COMMON*/
+/*======================================================*/
+
+///*======================================================*/
+///*PARTIALS 1*/
+///*======================================================*/
+@import partials/header
+@import partials/navigation
+
+///*======================================================*/
+///*COMPONENTS*/
+///*======================================================*/
+
 @import components/breadcrumbs
+@import components/files
 @import components/sliders
 @import components/user-form
 @import components/bitrix-search
@@ -53,14 +59,21 @@
 @import components/news-grid
 @import components/providers
 
-/*======================================================*/
-/*PAGES*/
-/*======================================================*/
+///*======================================================*/
+///*PARTIALS 2*/
+///*======================================================*/
+@import partials/sidebar
+@import partials/aside
+@import partials/footer
+
+///*======================================================*/
+///*PAGES*/
+///*======================================================*/
 @import pages/home
 
-/*======================================================*/
-/*THEMES*/
-/*======================================================*/
+///*======================================================*/
+///*THEMES*/
+///*======================================================*/
 @import themes/theme
 
 /*======================================================*/
