--- a/src/sass/partials/_sidebar.sass
+++ b/src/sass/partials/_sidebar.sass
@@ -64,7 +64,7 @@ $sidemenu-bg-color-hover: #999
 	z-index: 5
 
 	&::before
-		+pseudo($pos: relative)
+		+pseudo-inline-block-relative()
 		+ratio(1, 1)
 
 	svg
