--- a/src/sass/components/_scroll-nav.sass
+++ b/src/sass/components/_scroll-nav.sass
@@ -44,7 +44,8 @@
 				transform: translate(0, 100%)
 
 			svg
-				+centering()
+				position: absolute
+				+centering-transform()
 				+size(22px)
 
 			path
