--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -40,6 +40,21 @@
 	height: $height
 
 // =============================================================================
+// Position
+// =============================================================================
+/// Примесь устанавливает верхнюю и левую координаты
+///
+/// @param {Length} $t [0] - верхняя координата
+/// @param {Length} $l [0] - левая координата
+///
+/// @example Sass - Использование
+/// @example css - Вывод CSS
+
+=position($t: 0, $l: 0)
+	top: $t
+	left: $l
+
+// =============================================================================
 // font
 // =============================================================================
 /// Примесь добавляет одновремменно `font-size` и `line-height`
@@ -113,6 +128,21 @@
 	display: $display
 	position: $pos
 
+=pseudo-block-relative($content: '')
+	+pseudo($content: $content, $display: block, $pos: relative)
+
+=pseudo-relative($content: '')
+	+pseudo($content: $content, $display: null, $pos: relative)
+
+=pseudo-inline-block($content: '')
+	+pseudo($content: $content, $display: inline-block, $pos: null)
+
+=pseudo-inline-block-relative($content: '')
+	+pseudo($content: $content, $display: inline-block, $pos: relative)
+
+=pseudo-content($content: '')
+	+pseudo($content: $content, $display: null, $pos: null)
+
 // =============================================================================
 // vertical align
 // =============================================================================
@@ -179,6 +209,24 @@
 	white-space: nowrap
 	text-overflow: ellipsis
 	overflow: hidden
+
+// =============================================================================
+// height-text / max-height-text
+// =============================================================================
+/// Устанавливает высоту текста по количеству строк
+///
+/// @param {Number} $line [1] - количество строк
+/// @param {Length} $fz [1em] - font-size
+/// @param {Length} $lh [1] - line-height
+///
+/// @example Sass - Использование
+/// @example css - Вывод CSS
+
+=height-text($line: 1, $fz: 1em, $lh: 1)
+	height: calc(#{$line}*#{$fz}*#{$lh})
+
+=max-height-text($line: 1, $fz: 1em, $lh: 1)
+	max-height: calc(#{$line}*#{$fz}*#{$lh})
 
 // =============================================================================
 // margin-horizontal / margin-vertical / padding-horizontal / padding-vertical
@@ -376,6 +424,30 @@
 		width: $width
 		height: $height
 		+margin($top: round(-$height*0.5), $left: round(-$width*0.5))
+
+// =============================================================================
+// Сentering
+// =============================================================================
+/// Примесь центрирует элемент относительно родителя
+///
+/// @param {Boolean} $transform [true] - направление выравнивания
+///
+/// @example Sass - Использование
+/// @example css - Вывод CSS
+
+/// 1. С помощью transform: translate:
+=centering-transform($pos: null)
+	position: $pos
+	left: 50%
+	top: 50%
+	transform: translate(-50%, -50%)
+
+/// 2. С помощью margin:
+=centering-margin($width: null, $height: null, $pos: null)
+	position: $pos
+	left: 50%
+	top: 50%
+	+margin($top: round(-$height*0.5), $left: round(-$width*0.5))
 
 // =============================================================================
 // Reset for inline-block elements
