--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -6,15 +6,35 @@
 $breakpoints: ('desk-hd': 1920px, 'desk-lg': 1600px, 'desk-md': 1366px, 'desk-sm': 1200px, 'tab-lg': 992px, 'tab-sm': 768px, 'mob-lg': 640px, 'mob-md': 480px, 'mob-sm': 320px)
 
 // base
-$font-size: 1.6rem !default
-$line-height: round-float(2.8rem/$font-size, 2) !default
+$font-size: 1.8rem !default
+$line-height: round-float(3.2rem/$font-size, 2) !default
 
-$font-size-h1: 3.6rem !default
-$line-height-h1: 1.2 !default
+// ===============
+$font-size-h1: 4.8rem !default
+$line-height-h1: round-float(6.0rem/$font-size-h1, 2) !default
+// sm ===
 $font-size-h1--sm: 2.6rem !default
-$line-height-h1--sm: 1.3 !default
+$line-height-h1--sm: round-float(4.0rem/$font-size-h1--sm, 2) !default
+// ===============
+$font-size-h2: round-float($font-size-h1*3.6rem/4.8rem, 1) !default
+$line-height-h2: round-float(4.8rem/3.6rem, 2) !default
+// sm ===
+$font-size-h2--sm: round-float($font-size-h1--sm*0.85, 1) !default
+$line-height-h2--sm: round-float(($line-height-h1--sm*1.08),2) !default
+// ===============
+$font-size-h3: round-float($font-size-h1*2.4rem/4.8rem, 1) !default
+$line-height-h3: round-float(3.6rem/2.4rem, 2) !default
+// ===============
+$font-size-h4: round-float($font-size-h1*1.8rem/4.8rem, 1) !default
+$line-height-h4: round-float(3.0rem/1.8rem, 2) !default
+// ===============
+$font-size-h5: $font-size !default
+$line-height-h5: $line-height !default
+// ===============
+$font-size-h6: round-float($font-size*0.75, 1) !default
+$line-height-h6: round-float($line-height*1.25, 2) !default
 
-$bottom-space: round-float($font-size*$line-height, 1) !default
+$bottom-space: round-float(2.4rem, 1) !default
 $bottom-space-sm: round-float($font-size*$line-height*0.5, 1) !default
 $bottom-space-md: round-float($font-size*$line-height*1.5, 1) !default
 $bottom-space-lg: round-float($font-size*$line-height*2, 1) !default
@@ -50,15 +70,15 @@ $page-layout-space-horizontal: 50px !default
 // максимальная ширина сайта
 $page-layout-width: 1920px + $page-layout-space-horizontal*2 !default
 // минимальные отступы слева и справа у текствого блока
-$text-layout-space-horizontal: 50px !default
-$text-layout-space-horizontal-md: 30px !default
-$text-layout-space-horizontal-sm: 15px !default
+$text-layout-space-horizontal: 40px !default
+$text-layout-space-horizontal--md: 30px !default
+$text-layout-space-horizontal--sm: 15px !default
 // максимальная ширина текстового блока
-$text-layout-width: 640px + $text-layout-space-horizontal*2 !default
+$text-layout-width: 960px + $text-layout-space-horizontal*2 !default
 // минимальные отступы слева и справа у блокоа выходящего за пределы текста
-$flood-layout-space-horizontal: 40px !default
+$flood-layout-space-horizontal: $text-layout-space-horizontal !default
 // максимальная ширина текстового блока выходящего за пределы текста
-$flood-layout-width: 768px + $text-layout-space-horizontal*2 !default
+$flood-layout-width: $text-layout-width !default
 
 // form
 $form-text-color: $text-color-light !default
@@ -72,7 +92,6 @@ $form-bottom-space: 3rem !default
 
 // btn
 $btn-bg-color: tomato !default
-$btn-bg-hover-color: tomato !default
 $btn-bg-hover-color: darken($btn-bg-color, 20%) !default
 $btn-text-color: white !default
 
