--- a/src/sass/components/_scroll-nav.sass
+++ b/src/sass/components/_scroll-nav.sass
@@ -11,6 +11,9 @@
 	right: $sidebar-width + $scroll-nav-space
 	z-index: 50
 
+	.home-page &
+		right: $sidebar-width--lg + $scroll-nav-space
+
 	&, .#{$user-content} &
 		margin: 0
 
