--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -74,11 +74,11 @@ $text-layout-space-horizontal: 40px !default
 $text-layout-space-horizontal--md: 30px !default
 $text-layout-space-horizontal--sm: 15px !default
 // максимальная ширина текстового блока
-$text-layout-width: 960px + $text-layout-space-horizontal*2 !default
+$text-layout-width: 960px !default
 // минимальные отступы слева и справа у блокоа выходящего за пределы текста
 $flood-layout-space-horizontal: $text-layout-space-horizontal !default
 // максимальная ширина текстового блока выходящего за пределы текста
-$flood-layout-width: $text-layout-width !default
+$flood-layout-width: 1400px !default
 
 // form
 $form-text-color: $text-color-light !default
@@ -137,7 +137,8 @@ $logo-bg-color: #333 !default
 $nav-width: 380px !default
 
 // sidebar
-$sidebar-width: 320px !default
+$sidebar-width: 80px !default
+$sidebar-width--lg: 320px !default
 
 // top panel
 $top-panel-height: 80px !default
